# AI_rag_project

./: .gitignore  README.md  app.py  pyproject.toml
module/: check.py  embedding.py  history_manager.py  loader.py  rag_chain.py  retriever.py  router.py  splitter.py
vector_db/: chroma.sqlite3
