[project]
name = "ai-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.17",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.45.0",
]
